@@ -50,7 +50,7 @@ import org.elasticsearch.script.ExecutableScript;
 import org.elasticsearch.script.LeafSearchScript;
 import org.elasticsearch.script.ScoreAccessor;
 import org.elasticsearch.script.ScriptEngineService;
-import org.elasticsearch.script.ScriptException;
+import org.elasticsearch.script.GeneralScriptException;
 import org.elasticsearch.script.SearchScript;
 import org.elasticsearch.search.lookup.LeafSearchLookup;
 import org.elasticsearch.search.lookup.SearchLookup;
@@ -193,7 +193,7 @@ public class GroovyScriptEngineService extends AbstractComponent implements Scri
             if (logger.isTraceEnabled()) {
                 logger.trace("exception compiling Groovy script:", e);
             }
-            throw new ScriptException("failed to compile groovy script", e);
+            throw new GeneralScriptException("failed to compile groovy script", e);
         }
     }
 
@@ -201,9 +201,9 @@ public class GroovyScriptEngineService extends AbstractComponent implements Scri
      * Return a script object with the given vars from the compiled script object
      */
     @SuppressWarnings("unchecked")
-    private Script createScript(Object compiledScript, Map<String, Object> vars) throws InstantiationException, IllegalAccessException {
+    private Script createScript(Object compiledScript, Map<String, Object> vars) throws ReflectiveOperationException {
         Class<?> scriptClass = (Class<?>) compiledScript;
-        Script scriptObject = (Script) scriptClass.newInstance();
+        Script scriptObject = (Script) scriptClass.getConstructor().newInstance();
         Binding binding = new Binding();
         binding.getVariables().putAll(vars);
         scriptObject.setBinding(binding);
@@ -218,8 +218,8 @@ public class GroovyScriptEngineService extends AbstractComponent implements Scri
                 allVars.putAll(vars);
             }
             return new GroovyScript(compiledScript, createScript(compiledScript.compiled(), allVars), this.logger);
-        } catch (Exception e) {
-            throw new ScriptException("failed to build executable " + compiledScript, e);
+        } catch (ReflectiveOperationException e) {
+            throw new GeneralScriptException("failed to build executable " + compiledScript, e);
         }
     }
 
@@ -238,8 +238,8 @@ public class GroovyScriptEngineService extends AbstractComponent implements Scri
                 Script scriptObject;
                 try {
                     scriptObject = createScript(compiledScript.compiled(), allVars);
-                } catch (InstantiationException | IllegalAccessException e) {
-                    throw new ScriptException("failed to build search " + compiledScript, e);
+                } catch (ReflectiveOperationException e) {
+                    throw new GeneralScriptException("failed to build search " + compiledScript, e);
                 }
                 return new GroovyScript(compiledScript, scriptObject, leafLookup, logger);
             }
@@ -312,7 +312,7 @@ public class GroovyScriptEngineService extends AbstractComponent implements Scri
                 if (logger.isTraceEnabled()) {
                     logger.trace("failed to run {}", e, compiledScript);
                 }
-                throw new ScriptException("failed to run " + compiledScript, e);
+                throw new GeneralScriptException("failed to run " + compiledScript, e);
             }
         }
 
